--- a/buttons.html
+++ b/buttons.html
@@ -4,28 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleUI.css">
     <title>Document</title>
 </head>
 <body>
     <div>
-        <button class="btn-1">Button 1</button>
-        <p>Door Effect</p>
-        <button class="btn-2">Button 2A</button>
-        <p>Shutter top down</p>
-        <button class="btn-2B">Button 2B</button>
-        <p>Shutter bottom up</p>
-        <button class="btn-3">Button 3</button>
-        <p>Glow Effect</p>
-        <button class="btn-4">Button 4</button>
-        <p>Box Shadow</p>
-        <button class="btn-5">Button 5</button>
-        <p>Shine Effect</p>
-        <button class="btn-6">Button 6</button>
-        <p></p>
-        <button class="btn-7">Button 7</button>
-        <p>Border Effect</p>
-        <button class="btn-8">Button 8</button>
-        <p></p>
+        <button class="btn-1">Close Door</button>
+        <button class="btn-2">Rainbow</button>
+        <button class="btn-3">Glow</button>
+        <button class="btn-4">Box Shadow</button>
+        <button class="btn-5">Tilt</button>
+        <button class="btn-6">Flip</button>
+        <button class="btn-7">Border Effect</button>
+        <button class="btn-8"><span></span><span></span><span></span><span></span><span>Button</span></button>
+        <div class="btn-9">
+            <div class="box">H</div>
+            <div class="box">E</div>
+            <div class="box">L</div>
+            <div class="box">L</div>
+            <div class="box">O</div>
+        </div>
     </div>
     
 </body>
